--- a/bower.json
+++ b/bower.json
@@ -5,19 +5,14 @@
   ],
   "private": true,
   "dependencies": {
-    "app-layout": "polymerelements/app-layout#^0.9.0",
-    "app-route": "polymerelements/app-route#^0.9.1",
-    "iron-flex-layout": "polymerelements/iron-flex-layout#^1.0.0",
-    "iron-icon": "polymerelements/iron-icon#^1.0.0",
-    "iron-iconset-svg": "polymerelements/iron-iconset-svg#^1.0.0",
-    "iron-localstorage": "polymerelements/iron-localstorage#^1.0.0",
-    "iron-media-query": "polymerelements/iron-media-query#^1.0.0",
-    "iron-pages": "polymerelements/iron-pages#^1.0.0",
-    "iron-selector": "polymerelements/iron-selector#^1.0.0",
-    "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.1",
-    "polymer": "polymer/polymer#^1.4.0",
+    "app-elements": "PolymerElements/app-elements#^0",
+    "iron-elements": "PolymerElements/iron-elements#^1",
+    "paper-elements": "PolymerElements/paper-elements#^1",
+    "polymer": "polymer/polymer#^1",
     "cow-elements": "GeodanElements/cow-elements",
-    "mappu-elements": "GeodanElements/mappu-elements"
+    "mappu-elements": "GeodanElements/mappu-elements",
+    "d3.mappu": "Geodan/d3.mappu",
+    "gm-elements": "GeodanElements/gm-elements#"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
